# test-taska-2

./: pyproject.toml
task-1-bs4-requests/: export.py  main.py  template.xlsx
task-1-bs4-requests/result/: product_details.json  product_details.xlsx
task-2-selenium/: main.py
task-2-selenium/result/: product_details.json  product_details.xlsx
task-3-playwright/: main.py
task-3-playwright/result/: product_details.json  product_details.xlsx
